<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/appBackground"
    android:clickable="true">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="In order to create an event, you must first register your facility."
        android:textStyle="bold"
        android:textSize="20dp"
        android:paddingTop="70dp"
        android:paddingRight="40dp"
        android:paddingLeft="40dp"
        android:paddingBottom="40dp"
        android:layout_gravity="center_horizontal"/>

    <EditText
        android:id="@+id/add_facility_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="Facility Name"
        android:padding="20dp"
        android:layout_gravity="center"/>

    <EditText
        android:id="@+id/add_facility_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:padding="20dp"
        android:hint="Facility Address"
        android:layout_gravity="center"/>
    <Button
        android:id="@+id/button_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Confirm"
        android:backgroundTint="@color/listBackground"
        android:layout_gravity="center" />

    <Button
        android:id="@+id/button_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/zxing_transparent"
        android:padding="0dp"
        android:text="Cancel"
        android:textColor="@color/black" />

</LinearLayout>
